--- a/requirements/requirements_nlp.txt
+++ b/requirements/requirements_nlp.txt
@@ -10,7 +10,7 @@ ijson==3.2.3
 jieba==0.42.1
 markdown2==2.4.13
 matplotlib==3.8.4
-megatron_core==0.7.0b0
+megatron_core==0.5.0
 nltk==3.8.1
 opencc==1.1.6
 pangu==4.0.6.1
